--- a/web/index.html
+++ b/web/index.html
@@ -1,11 +1,12 @@
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>HIBERNATE 1 A 1<title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script type="text/javascript" src="js/ajax.js"></script>
     </head>
     <body>
+        <div id="contenedor">
         <div id="pagina">
             PERSONA
             <br/>
@@ -32,6 +33,7 @@
             <input type="submit" name="boton" id="boton" value="Borrar" onclick="funcionAjax(this.value)" />
         </div>
         <div id="resultado">
+        </div>
         </div>
     </body>
 </html>
