--- a/web/index.html
+++ b/web/index.html
@@ -6,7 +6,7 @@
         <script type="text/javascript" src="js/ajax.js"></script>
     </head>
     <body>
-        <div id="contenedor">
+        <div id="contenido">
         <div id="pagina">
             PERSONA
             <br/>
