--- a/web/index.html
+++ b/web/index.html
@@ -3,6 +3,7 @@
         <title>HIBERNATE 1 A 1<title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link src="css/estilo.css" rel="stylesheet" type="text/css"/>
         <script type="text/javascript" src="js/ajax.js"></script>
     </head>
     <body>
