--- a/web/index.html
+++ b/web/index.html
@@ -1,9 +1,10 @@
 <html>
     <head>
-        <title>HIBERNATE 1 A 1<title>
+        <title>HIBERNATE 1 A 1</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script type="text/javascript" src="js/ajax.js"></script>
+        <link rel="stylesheet" type="text/css" href="css/estilos.css" />
     </head>
     <body>
         <div id="contenedor">
