--- a/web/index.html
+++ b/web/index.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" type="text/css" href="css/estilos.css" />
     </head>
     <body>
+        <div id="contenedor">
         <div id="pagina">
             PERSONA
             <br/>
@@ -33,6 +34,7 @@
             <input type="submit" name="boton" id="boton" value="Borrar" onclick="funcionAjax(this.value)" />
         </div>
         <div id="resultado">
+        </div>
         </div>
     </body>
 </html>
