Nuevo estilo definido para la tabla de resultados

--- a/web/index.html
+++ b/web/index.html
@@ -34,6 +34,15 @@
             <input type="submit" name="boton" id="boton" value="Borrar" onclick="funcionAjax(this.value)" />
         </div>
         <div id="resultado">
+            <!--<table>
+                <thead><tr><th>header</th><th>header</th><th>header</th><th>header</th></tr></thead>
+                <tbody><tr><td>data</td><td>data</td><td>data</td><td>data</td></tr>
+                <tr class="alt"><td>data</td><td>data</td><td>data</td><td>data</td></tr>
+                <tr><td>data</td><td>data</td><td>data</td><td>data</td></tr>
+                <tr class="alt"><td>data</td><td>data</td><td>data</td><td>data</td></tr>
+                <tr><td>data</td><td>data</td><td>data</td><td>data</td></tr>
+                </tbody>
+            </table>-->
         </div>
         </div>
     </body>
